# gpu-tpu-pedia

./: .gitignore  README.md  index.html
Learning/DeepSeek-V3-explained/: DeepSeek-V3-通俗解读.md
Learning/deepseek-r1-explained/: DeepSeek-R1-通俗解读.md
Learning/deepseek-v3.2-explained/: DeepSeek-V3.2-通俗解读.md
Learning/engram-explained/: Engram-通俗解读.md
Learning/kimi-linear-explained/: Kimi-Linear-通俗解读.md
Learning/mHC-explained/: mHC-通俗解读.md
VibeCoding/: README.md  install-claude-code.sh
gpu/: deepep-intranode.yaml  readme.md
gpu/a4x/: AUDIT-REPORT.en.md  AUDIT-REPORT.md  README.en.md  README.md  VALIDATION-ARCHIVE-20260627.en.md  VALIDATION-ARCHIVE-20260627.md
gpu/a4x-max/: README.md
gpu/deepep/: DEEPEP_GUIDE.md  DEEPEP_INSTALL_REPORT.md  Dockerfile  NVSHMEM-CONFIG.md  README.md  TROUBLESHOOTING.md  deepep-installer-02pool.yaml  deepep-installer-standard.yaml  deepep-installer.yaml  deepep-internode-distroless.yaml  deepep-internode-ngc-25.06.yaml  deepep-internode.yaml  deepep-intranode-distroless.yaml  deepep-intranode-ngc-25.06.yaml  deepep-intranode-standard.yaml  deepep-unified-install.sh  deepep_test.sh  gpu-runtime-wxg.yaml  install-deepep.sh  install.sh  install_nv580_cu129_deepep_deps.sh  nccl-test-internode-job.yaml  readme.md  readme_en.md  run-internode-test-remote.sh  run-internode-test.sh  run-intranode-test.sh  run-qwen3-30B-A3B.sh  setup-deepep.sh  testDeepEp-debug.yaml  (+4 more)
tpu/: tpu-v7-vs-b200-20260311.html
tpu/v7_perf/chay_gemm_benchmark_simple/backends/nv_gpu_cublas/: CMakeLists.txt  build.sh  cublas_gemm.cu  pybind_wrapper.cpp
(+589 files in other folders)
